[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2.6"
hyper = "0.14.18"
regex          = { version = "1.3.9" }
serde_regex    = { version = "1.1.0" }
serde_json     = "1.0.55"
serde_derive   = "1.0.112"
serde          = "1.0.112"
simple_proxy = "1.3.4"
structopt = "0.3.26"
tokio = { version = "1.17.0", features = ["full"] }
log = "0.4.16"
env_logger = "0.9.0"
